<resources>
    <string name="app_name">Library</string>

    <string name="capture">capture</string>
    <string name="album">album</string>
    <string name="sdcard_not_found">Sdcard not found!</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="please_waiting">Please waiting</string>

    <string name="check_update">Check Update</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="quit_confirmation">Click back again to quit</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="forget_password">Forget password</string>
    <string name="send_auth_code">Send auth code</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_auth_code">Auth Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirmation">Password Confirmation</string>
    <string name="hint_original_password">Original Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password_confirmation">New Password Confirmation</string>

    <string name="to_register">Still no account? To register!</string>
    <string name="to_be_driver">As the driver</string>
    <string name="evaluate">order evaluation</string>
    <string name="bt_evaluate">Submit evaluation</string>
    <string name="cancelOrder">Cancel order</string>
    <string name="cancel_order_hint">If you want to cancel the trip, please select a reason</string>
    <string name="ForCustomers">We will try to provide better service for you</string>
    <string name="not_cancel">not cancel</string>

</resources>
