<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f0f0f0"
                tools:context=".activity.BaseLoginActivity">

    <RelativeLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_container_height"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_centerVertical="true"
            android:background="@drawable/car_logo"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input_area_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_container"
        android:layout_marginTop="@dimen/login_marginTop"
        android:background="#FFF"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mobile_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_number"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/mobile_focused"/>

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@+id/imgv_number"
                android:background="@null"
                android:hint="@string/hint_mobile"
                android:textColorHint="@color/text_hint"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_pwd"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/password_unfocused"/>
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@id/imgv_pwd"
                android:background="@null"
                android:hint="@string/hint_password"
                android:textColorHint="@color/text_hint"/>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/login_imgv_to_edit"
                android:text="@string/forget_password"
                android:textSize="@dimen/text_small"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_button_width"
        android:layout_below="@+id/input_area_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_margin"
        android:background="@color/action_button_background"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/text_secondary"/>


    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/go_to_register"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/to_register"
        android:textColor="#ffbc00"
        android:textSize="16dp"/>
</RelativeLayout>
