<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.BaseForgetPwdActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/base_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/input_area_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="@dimen/reset_margin_top"
        android:background="@color/base_title_bar_client_background"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/mobile_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_number_forget"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/mobile_focused"/>
            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@+id/imgv_number_forget"
                android:background="@null"
                android:hint="@string/hint_mobile"
                android:textColorHint="@color/text_hint"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/auth_code_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_auth_code_forget"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/auth_code_unfocused"/>
            <EditText
                android:id="@+id/input_auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@+id/imgv_auth_code_forget"
                android:background="@null"
                android:hint="@string/hint_auth_code"
                android:textColorHint="@color/text_hint"/>

            <TextView
                android:id="@+id/send_auth_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginRight="@dimen/login_imgv_to_edit"
                android:text="@string/send_auth_code"
                android:textSize="@dimen/text_small"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_pwd_forget"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/password_unfocused"/>
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@+id/imgv_pwd_forget"
                android:background="@null"
                android:hint="@string/hint_password"
                android:textColorHint="@color/text_hint"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_confirmation_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_item_height">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imgv_pwd_confirmation_forget"
                android:layout_width="20dp"
                android:layout_height="23dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@drawable/password_unfocused"/>
            <EditText
                android:id="@+id/input_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_imgv_to_edit"
                android:layout_toEndOf="@+id/imgv_pwd_confirmation_forget"
                android:background="@null"
                android:hint="@string/hint_password_confirmation"
                android:textColorHint="@color/text_hint"/>
        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/reset_pwd_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_button_width"
        android:layout_below="@+id/input_area_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_margin"
        android:background="@color/action_button_background"
        android:gravity="center"
        android:text="@string/reset_pwd"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/text_secondary"/>
</RelativeLayout>
